src/objects/CBAccount__c.object
<CustomObject>
    <fields>
        <fullName>CBAccountType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account Type</label>
        <referenceTo>CBAccountType__c</referenceTo>
        <relationshipLabel>CB Accounts</relationshipLabel>
        <relationshipName>CBAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBSubAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Account Subtype</label>
        <referenceTo>CBSubAccount__c</referenceTo>
        <relationshipLabel>CB Accounts</relationshipLabel>
        <relationshipName>CB_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Index__c</columns>
        <columns>CBAccountType__c</columns>
        <columns>CBSubAccount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>